# a-level-cs-proj

./: CMakeLists.txt  build.bat  cornell_box.mtl  logo_image.mtl  run.sh
include/: app.hpp  bsdf.hh  camera.hh  camera.hpp  config.hh  image.hh  image.hpp  material.hh  material.hpp  renderer.hh  scene.hh  scene.hpp  shape.hh  shape.hpp  utility.hh  utility.hpp
include/core/: app.h  bsdf.h  image.h  material.h  render.h  scene.h  shape.h  utility.h
src/: camera.cc  main.cc  main.cpp  renderer.cc
